Refactor/Feat: Remove AIO Image, MQTT Home Assistant support & Deals API (#26)
